Fix overflowing metadata section

--- a/src/app/user/dashboard/lecturer/MetadataSection.module.scss
+++ b/src/app/user/dashboard/lecturer/MetadataSection.module.scss
@@ -1,6 +1,7 @@
 .metadata {
   display: flex;
   align-items: flex-start;
+  flex-wrap: wrap;
   gap: 2rem;
 
   .inputs {
